# commutecompass

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
contrib/: openclaw-send.sh
data/: known_venues.yaml
examples/: config.test.toml  config.toml  env.example  nixos-usage.nix
examples/ha/: commute_tomorrow_alarm.yaml
nix/: module.nix  package.nix
scripts/: build_stops.py
skills/commutecompass/: SKILL.md
skills/commutecompass/references/: config-allowlist.md  examples.md
skills/commutecompass/scripts/: adjust.sh  (+18 more)
src/commutecompass/: __init__.py  __main__.py  calendar_client.py  cli.py  config.py  format.py  geocode.py  gtfs_rt.py  ha_client.py  joblock.py  llm.py  models.py  monitoring.py  mta.py  notify.py  planner.py  realtime.py  resolver.py  retry.py  routing.py  selector.py  store.py  timeutil.py  venues.py  weather.py
src/commutecop/: __init__.py  __main__.py  calendar_client.py  cli.py  format.py  geocode.py  llm.py  models.py  mta.py  notify.py  planner.py  resolver.py  routing.py  store.py  venues.py
tests/: conftest.py  test_calendar_client.py  test_cli.py  test_config.py  test_format.py  test_geocode.py  test_ha_client.py  test_joblock.py  test_jobs.py  test_jobs_tomorrow.py  test_llm.py  test_models.py  test_monitoring.py  test_mta.py  test_notify.py  test_planner.py  test_realtime.py  test_resolver.py  test_retry.py  test_routing.py  test_selector.py  test_store.py  test_timeutil.py  test_venues.py  test_weather.py
tests/fixtures/: directions_sample.json  gtfs_rt_sample.pb
(+10 files in other folders)
