[project]
name = "commutecompass"
version = "0.1.0"
description = "NYC commute orchestrator"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "click>=8.1",
  "google-api-python-client>=2.120",
  "google-auth-oauthlib>=1.2",
  "google-auth-httplib2>=0.2",
  "httpx>=0.27",
  "gtfs-realtime-bindings>=1.0",
  "pyyaml>=6.0",
  "rapidfuzz>=3.6",
  "tomli>=2.0",
]

[project.scripts]
commutecompass = "commutecompass.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commutecompass"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"